[gd_scene load_steps=16 format=2]

[ext_resource path="res://sc_pantalla_inici.gd" type="Script" id=1]
[ext_resource path="res://lletres/Scratch Boys.ttf" type="DynamicFontData" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.137255, 0.133333, 0.133333, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.137255, 0.133333, 0.133333, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="DynamicFont" id=5]
size = 71
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.137255, 0.133333, 0.133333, 1 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.137255, 0.133333, 0.133333, 1 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="DynamicFont" id=9]
size = 62
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.137255, 0.133333, 0.133333, 1 )

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.137255, 0.133333, 0.133333, 1 )

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="DynamicFont" id=13]
size = 66
font_data = ExtResource( 2 )

[node name="pantalla_inici" type="Node2D"]
script = ExtResource( 1 )

[node name="fons_substitud" type="ColorRect" parent="."]
margin_left = -58.0
margin_top = -26.0
margin_right = 1125.0
margin_bottom = 663.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button_JUGAR" type="Button" parent="."]
margin_left = 50.0
margin_top = 350.0
margin_right = 350.0
margin_bottom = 475.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
custom_colors/font_color_disabled = Color( 0.0509804, 0.494118, 0.164706, 1 )
custom_colors/font_color = Color( 0.0509804, 0.494118, 0.164706, 1 )
custom_colors/font_color_hover = Color( 0.113725, 0.717647, 0.619608, 1 )
custom_colors/font_color_pressed = Color( 0.113725, 0.717647, 0.619608, 1 )
text = "JUGAR"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button_CONTROLS" type="Button" parent="."]
margin_left = 375.0
margin_top = 350.0
margin_right = 675.0
margin_bottom = 475.0
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
custom_fonts/font = SubResource( 9 )
custom_colors/font_color_disabled = Color( 0.0509804, 0.494118, 0.164706, 1 )
custom_colors/font_color = Color( 0.0509804, 0.494118, 0.164706, 1 )
custom_colors/font_color_hover = Color( 0.113725, 0.717647, 0.619608, 1 )
custom_colors/font_color_pressed = Color( 0.113725, 0.717647, 0.619608, 1 )
text = "CONTROLS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button_INFO" type="Button" parent="."]
margin_left = 700.0
margin_top = 350.0
margin_right = 1000.0
margin_bottom = 475.0
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 11 )
custom_styles/normal = SubResource( 12 )
custom_fonts/font = SubResource( 13 )
custom_colors/font_color_disabled = Color( 0.0509804, 0.494118, 0.164706, 1 )
custom_colors/font_color = Color( 0.0509804, 0.494118, 0.164706, 1 )
custom_colors/font_color_hover = Color( 0.113725, 0.717647, 0.619608, 1 )
custom_colors/font_color_pressed = Color( 0.113725, 0.717647, 0.619608, 1 )
text = "HISTÃ’RIA"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Button_JUGAR" to="." method="_on_Button_JUGAR_pressed"]
[connection signal="pressed" from="Button_CONTROLS" to="." method="_on_Button_CONTROLS_pressed"]
[connection signal="pressed" from="Button_INFO" to="." method="_on_Button_INFO_pressed"]
